[package]
name = "cs381-hw8"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }
tower = "0.5.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
anyhow = "1.0.89"

